v6 updated: gRPC implemented, LWJGL updated